# medical_agent_server

./: .gitignore  pyproject.toml
app/: main.py
app/agents/: state.py
app/agents/supervisor/: agent.py  prompts.py
app/api/v1/: router.py
app/api/v1/endpoints/: chat.py
app/core/: config.py
app/graph/: graph.py  state.py
app/graph/general_doctor/: agent.py  prompt.py
app/graph/receptionist/: agent.py  prompt.py
app/graph/triage_nurse/: agent.py  prompt.py  schemas.py
tests/: test_graph.py
